@@ -101,6 +101,8 @@ All (GUI):
 - Fixed wxHTML default font size for printing to be 12pt regardless of the
   platform, instead of depending on GUI toolkit's screen configuration.
 - Support wxDP_ALLOWNONE style in generic wxDatePickerCtrl version.
+- Set wxKeyEvent::m_uniChar correctly in the events generated by generic
+  wxListCtrl (Mikkel S).
 
 All (Unix):
 
